Used uuid7 for file names to increase entropy. Created ModuleVersions and associated spec. Included column printers to help visualize resources using kubectl. Ensure the checksum is validated and passed in as a query parameter as an extra layer of security when attempting to download a module

--- a/services/controller/config/crd/bases/kerrareg.io_modules.yaml
+++ b/services/controller/config/crd/bases/kerrareg.io_modules.yaml
@@ -14,7 +14,20 @@ spec:
     singular: module
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - description: The provider of the module
+      jsonPath: .spec.provider
+      name: Provider
+      type: string
+    - description: The source repository URL of the module
+      jsonPath: .spec.repoUrl
+      name: RepoURL
+      type: string
+    - description: The configuration for module storage
+      jsonPath: .spec.storageConfig
+      name: StorageConfig
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: Module is the Schema for the Modules API.
@@ -58,8 +71,12 @@ spec:
                 type: object
               versions:
                 items:
+                  description: ModuleVersionSpec defines a specific version of a Kerrareg
+                    Module.
                   properties:
                     checksum:
+                      type: string
+                    fileName:
                       type: string
                     storage:
                       properties:
@@ -84,6 +101,8 @@ spec:
                     version:
                       type: string
                   required:
+                  - fileName
+                  - storage
                   - version
                   type: object
                 type: array
@@ -93,8 +112,45 @@ spec:
             - versions
             type: object
           status:
-            description: ModuleStatus defines the observed state of Module.
+            description: ModuleStatus defines the observed state of a module.
             properties:
+              moduleVersions:
+                items:
+                  description: ModuleVersionSpec defines a specific version of a Kerrareg
+                    Module.
+                  properties:
+                    checksum:
+                      type: string
+                    fileName:
+                      type: string
+                    storage:
+                      properties:
+                        s3:
+                          properties:
+                            config:
+                              properties:
+                                bucket:
+                                  type: string
+                                region:
+                                  type: string
+                              required:
+                              - bucket
+                              - region
+                              type: object
+                            key:
+                              type: string
+                          required:
+                          - key
+                          type: object
+                      type: object
+                    version:
+                      type: string
+                  required:
+                  - fileName
+                  - storage
+                  - version
+                  type: object
+                type: array
               synced:
                 type: boolean
             required:
