--- a/services/controller/Makefile
+++ b/services/controller/Makefile
@@ -28,8 +28,8 @@ BUNDLE_METADATA_OPTS ?= $(BUNDLE_CHANNELS) $(BUNDLE_DEFAULT_CHANNEL)
 # This variable is used to construct full image tags for bundle and catalog images.
 #
 # For example, running 'make bundle-build bundle-push catalog-build catalog-push' will build and push both
-# defdev.io/kerrareg-bundle:$VERSION and defdev.io/kerrareg-catalog:$VERSION.
-IMAGE_TAG_BASE ?= defdev.io/kerrareg
+# github.com/tonedefdev/kerrareg-bundle:$VERSION and github.com/tonedefdev/kerrareg-catalog:$VERSION.
+IMAGE_TAG_BASE ?= github.com/tonedefdev/kerrareg
 
 # BUNDLE_IMG defines the image:tag used for the bundle.
 # You can use it as an arg. (E.g make bundle-build BUNDLE_IMG=<some-registry>/<project-name-bundle>:<tag>)
