--- a/services/module/module_example.yaml
+++ b/services/module/module_example.yaml
@@ -4,18 +4,19 @@ metadata:
   name: terraform-azurerm-aks
   namespace: defdevio
 spec:
-  fileFormat: zip
-  githubClientConfig:
-    useAuthenticatedClient: true
-  immutable: true
-  provider: azurerm
-  repoOwner: defdevio
-  repoUrl: https://github.com/defdevio/terraform-azurerm-aks
-  storageConfig:
-    s3:
-      bucket: kerrareg-module-store
-      region: us-west-2
+  moduleConfig:
+    fileFormat: zip
+    githubClientConfig:
+      useAuthenticatedClient: true
+    immutable: true
+    provider: azurerm
+    repoOwner: defdevio
+    repoUrl: https://github.com/defdevio/terraform-azurerm-aks
+    storageConfig:
+      s3:
+        bucket: kerrareg-module-store
+        region: us-west-2
   versions:
-  - version: v0.0.1
   - version: v0.0.2
+  - version: v0.0.1
   - version: v0.0.3
