Include latest version in kubectl output. Ensure that reconciling versions is idempotent by verifying the file exists or that it's checksum has not changed. Fixed issues where certain fields were not being updated due to status updates making the original value nil. Started implementation of azure storage blob. Used iota for method types on soi to ensure consistency. Created factories and runtimes to break apart code into distinct functions to help with unit testing

--- a/services/module/module_example.yaml
+++ b/services/module/module_example.yaml
@@ -1,7 +1,7 @@
 apiVersion: kerrareg.io/v1alpha1
 kind: Module
 metadata:
-  name: terraform-azurerm-aks
+  name: terraform-aws-eks
   namespace: defdevio
 spec:
   moduleConfig:
@@ -9,14 +9,11 @@ spec:
     githubClientConfig:
       useAuthenticatedClient: true
     immutable: true
-    provider: azurerm
-    repoOwner: defdevio
-    repoUrl: https://github.com/defdevio/terraform-azurerm-aks
+    provider: aws
+    repoOwner: terraform-aws-modules
+    repoUrl: https://github.com/terraform-aws-modules/terraform-aws-eks
     storageConfig:
-      s3:
-        bucket: kerrareg-module-store
-        region: us-west-2
+      fileSystem:
+        directoryPath: /Users/tonedefdev/Desktop/modules/
   versions:
-  - version: v0.0.2
-  - version: v0.0.1
-  - version: v0.0.3
+  - version: v21.12.0
