Moved github and storage to pkg directory so it can be imported as a module. Started the implementation of the depot service that can leverage a versionConstraints string to match versions that the Module resource should reconcile

--- a/services/version/config/crd/bases/kerrareg.io_versions.yaml
+++ b/services/version/config/crd/bases/kerrareg.io_versions.yaml
@@ -117,8 +117,8 @@ spec:
                           on a local filesystem.
                         properties:
                           directoryPath:
-                            description: The path on the file system where the Version
-                              will be stored.
+                            description: The directory path on the file system where
+                              the Version will be stored.
                             type: string
                         type: object
                       s3:
@@ -151,7 +151,7 @@ spec:
                 type: object
               type:
                 description: The type of resource. Either 'Module' or 'Provider'
-                type: integer
+                type: string
               version:
                 description: The version of the Module or Provider.
                 type: string
