Fixed issue where missing the v prefix was causing 404's. Removed a number of issues where controllers were returning warnings to non-nil error and non-nil requeue. Started full implementation of azure storage. Added a GetObject method to the storage interface that returns an io.Reader that can be used for streaming the file from the underlying storage system. Ensure that when github config is set we create a github client but also still process the rest of the version. Implemented reconcile of deleted versions by comparing existing versions of a module to the new desired module versions

--- a/services/depot/config/samples/kerrareg.io_v1alpha1_depot.yaml
+++ b/services/depot/config/samples/kerrareg.io_v1alpha1_depot.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: defdevio
 spec:
   moduleConfigs:
-  - name: 
+  - name: terraform-aws-eks
     fileFormat: zip
     githubClientConfig:
       useAuthenticatedClient: true
@@ -16,4 +16,4 @@ spec:
     storageConfig:
       fileSystem:
         directoryPath: /Users/tonedefdev/Desktop/modules/
-    versionConstraints: ~> v21.0
+    versionConstraints: ">= 21.10.1"
