Restructured the api into a centralized package to make it easier to generate deep copy methods and streamline references across the project. Added the GCS implementation. Started on the readme to give examples on how to use the software. Fixed some issues with the filesystem not unescaping the directory path. Fixed a number of reconile issues. Added a Helm chart to help with deployments to other clusters

--- a/services/module/config/crd/bases/kerrareg.io_modules.yaml
+++ b/services/module/config/crd/bases/kerrareg.io_modules.yaml
@@ -109,6 +109,28 @@ spec:
                   storageConfig:
                     description: The external storage configuration settings.
                     properties:
+                      azureStorage:
+                        properties:
+                          accountName:
+                            description: The Azure Storage Account name.
+                            type: string
+                          accountUrl:
+                            description: The Azure Storage Account URL.
+                            type: string
+                          resourceGroup:
+                            description: The Azure Resource Group where the Azure
+                              Storage Account is located.
+                            type: string
+                          subscriptionID:
+                            description: The Azure subscription ID where the Azure
+                              Storage Account is located.
+                            type: string
+                        required:
+                        - accountName
+                        - accountUrl
+                        - resourceGroup
+                        - subscriptionID
+                        type: object
                       fileSystem:
                         description: The configuration settings for storing Versions
                           on a local filesystem.
