--- a/chart/kerrareg/values.yaml
+++ b/chart/kerrareg/values.yaml
@@ -12,7 +12,7 @@ version:
   enabled: true
   replicaCount: 1
   image:
-    repository: kerrareg/version
+    repository: ghcr.io/tonedefdev/kerrareg/version-controller
     tag: latest
   resources:
     requests:
@@ -30,7 +30,7 @@ module:
   enabled: true
   replicaCount: 1
   image:
-    repository: kerrareg/module
+    repository: ghcr.io/tonedefdev/kerrareg/module-controller
     tag: latest
   resources:
     requests:
@@ -48,7 +48,7 @@ depot:
   enabled: false  # Set to true to enable the Depot controller
   replicaCount: 1
   image:
-    repository: kerrareg/depot
+    repository: ghcr.io/tonedefdev/kerrareg/depot-controller
     tag: latest
   resources:
     requests:
@@ -66,7 +66,7 @@ server:
   enabled: true
   replicaCount: 1
   image:
-    repository: kerrareg/server
+    repository: ghcr.io/tonedefdev/kerrareg/server
     tag: latest
   service:
     type: LoadBalancer
@@ -77,7 +77,7 @@ server:
     className: nginx
     annotations: {}
     hosts:
-      - host: kerrareg.example.com
+      - host: kerrareg.defdev.io
         paths:
           - path: /
             pathType: Prefix
@@ -113,8 +113,3 @@ serviceAccount:
 rbac:
   # Create RBAC roles and role bindings
   create: true
-
-## Custom Resource Definitions
-crd:
-  # Install CRDs as part of the chart
-  install: true
