--- a/chart/kerrareg/templates/module-deployment.yaml
+++ b/chart/kerrareg/templates/module-deployment.yaml
@@ -25,10 +25,8 @@ spec:
         runAsUser: 65532
       containers:
       - name: manager
-        image: "{{ .Values.module.image.repository }}:{{ .Values.module.image.tag }}"
+        image: "{{ .Values.module.image.repository }}:{{ .Values.global.image.tag }}"
         imagePullPolicy: {{ .Values.global.imagePullPolicy }}
-        command:
-        - /manager
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
